@@ -7,7 +7,6 @@ import static org.junit.jupiter.api.Assertions.assertAll;
 import java.util.Collections;
 import java.util.List;
 
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -26,6 +25,7 @@ import codezap.template.domain.Template;
 import codezap.template.domain.Thumbnail;
 import codezap.template.domain.Visibility;
 import codezap.template.dto.request.CreateSourceCodeRequest;
+import codezap.template.dto.request.CreateTemplateRequest;
 import codezap.template.dto.request.UpdateSourceCodeRequest;
 import codezap.template.dto.request.UpdateTemplateRequest;
 
@@ -47,7 +47,7 @@ class SourceCodeServiceTest extends ServiceTest {
             CreateSourceCodeRequest request2 = new CreateSourceCodeRequest("file2.java", "content2", 2);
 
             // when
-            sourceCodeService.createSourceCodes(template, List.of(request1, request2));
+            sourceCodeService.createSourceCodes(template, createSavedTemplateRequest(List.of(request1, request2)));
 
             // then
             List<SourceCode> sourceCodes = sourceCodeRepository.findAllByTemplate(template);
@@ -61,7 +61,6 @@ class SourceCodeServiceTest extends ServiceTest {
         }
 
         @Test
-        @Disabled("애플리케이션 코드에서 검증 코드 작성 필요")
         @DisplayName("실패: 순서 중복된 코드 존재")
         void createSourceCodes_WhenOrdinalIsDuplicate() {
             // given
@@ -70,17 +69,14 @@ class SourceCodeServiceTest extends ServiceTest {
             CreateSourceCodeRequest request1 = new CreateSourceCodeRequest("file1.java", "content1", sameOrdinal);
             CreateSourceCodeRequest request2 = new CreateSourceCodeRequest("file2.java", "content2", sameOrdinal);
 
-            // when
-            sourceCodeService.createSourceCodes(template, List.of(request1, request2));
-
-            // then
-            assertThatThrownBy(() -> sourceCodeRepository.findAllByTemplate(template))
+            // when & then
+            assertThatThrownBy(() -> sourceCodeService.createSourceCodes(
+                    template, createSavedTemplateRequest(List.of(request1, request2))))
                     .isInstanceOf(CodeZapException.class)
-                    .hasMessage("소스 코드의 순서는 중복될 수 없습니다.");
+                    .hasMessage("소스 코드 순서가 잘못되었습니다.");
         }
 
         @Test
-        @Disabled("애플리케이션 코드에서 검증 코드 작성 필요")
         @DisplayName("실패: 순서가 1부터 시작하지 않는 소스 코드")
         void createSourceCodes_WhenOrdinalIsNotStart1() {
             // given
@@ -88,17 +84,14 @@ class SourceCodeServiceTest extends ServiceTest {
             CreateSourceCodeRequest request1 = new CreateSourceCodeRequest("file1.java", "content1", 0);
             CreateSourceCodeRequest request2 = new CreateSourceCodeRequest("file2.java", "content2", 1);
 
-            // when
-            sourceCodeService.createSourceCodes(template, List.of(request1, request2));
-
-            // then
-            assertThatThrownBy(() -> sourceCodeRepository.findAllByTemplate(template))
+            // when & then
+            assertThatThrownBy(() -> sourceCodeService.createSourceCodes(
+                    template, createSavedTemplateRequest(List.of(request1, request2))))
                     .isInstanceOf(CodeZapException.class)
-                    .hasMessage("소스 코드의 순서는 1부터 시작해야 합니다.");
+                    .hasMessage("소스 코드 순서가 잘못되었습니다.");
         }
 
         @Test
-        @Disabled("애플리케이션 코드에서 검증 코드 작성 필요")
         @DisplayName("실패: 소스 코드의 순서들이 연속적이지 않은 경우")
         void createSourceCodes_WhenOrdinalIsNotSort() {
             // given
@@ -107,9 +100,10 @@ class SourceCodeServiceTest extends ServiceTest {
             CreateSourceCodeRequest request2 = new CreateSourceCodeRequest("file2.java", "content2", 3);
 
             // when & then
-            assertThatThrownBy(() -> sourceCodeService.createSourceCodes(template, List.of(request1, request2)))
+            assertThatThrownBy(() -> sourceCodeService.createSourceCodes(
+                    template, createSavedTemplateRequest(List.of(request1, request2))))
                     .isInstanceOf(CodeZapException.class)
-                    .hasMessage("소스 코드의 순서는 1부터 시작해야 합니다.");
+                    .hasMessage("소스 코드 순서가 잘못되었습니다.");
         }
     }
 
@@ -179,21 +173,21 @@ class SourceCodeServiceTest extends ServiceTest {
     class UpdateSourceCodes {
 
         @Test
-        @Disabled("애플리케이션 코드에서 로직 변경 필요")
-        @DisplayName("성공: 일부 소스 코드 삭제 및 새로운 소스 코드 추가 시, 삭제된 코드 순서는 앞당겨지고 새로 추가된 소스 코드의 순서는 가장 마지막 순서")
-        void updateSourceCodes_WhenDeleteSomeAndAddNew_ExistingCodesHavePriority() {
+        @DisplayName("성공: 기존 소스 코드 제목, 내용 수정 및 새로운 소스 코드 추가")
+        void updateSourceCodes() {
             // given
             Template template = createSavedTemplate();
             SourceCode sourceCode1 = sourceCodeRepository.save(SourceCodeFixture.get(template, 1));
-            SourceCode deleteSourceCode = sourceCodeRepository.save(SourceCodeFixture.get(template, 2));
+            SourceCode sourceCode2 = sourceCodeRepository.save(SourceCodeFixture.get(template, 2));
             Thumbnail thumbnail = thumbnailRepository.save(new Thumbnail(template, sourceCode1));
 
             UpdateSourceCodeRequest updateRequest1 = getUpdateSourceCodeRequest(sourceCode1);
+            UpdateSourceCodeRequest updateRequest2 = getUpdateSourceCodeRequest(sourceCode2);
             CreateSourceCodeRequest createRequest = new CreateSourceCodeRequest("새로운 제목1", "새로운 내용1", 3);
             UpdateTemplateRequest updateTemplateRequest = getUpdateTemplateRequest(
                     List.of(createRequest),
-                    List.of(updateRequest1),
-                    List.of(deleteSourceCode.getId()),
+                    List.of(updateRequest1, updateRequest2),
+                    Collections.emptyList(),
                     template.getCategory().getId(),
                     Collections.emptyList()
             );
@@ -202,24 +196,26 @@ class SourceCodeServiceTest extends ServiceTest {
             sourceCodeService.updateSourceCodes(updateTemplateRequest, template, thumbnail);
 
             // then
+            SourceCode updatedSourceCode1 = sourceCodeRepository.fetchById(sourceCode1.getId());
+            SourceCode updatedSourceCode2 = sourceCodeRepository.fetchById(sourceCode2.getId());
+            SourceCode newSourceCode = sourceCodeRepository.fetchByTemplateAndOrdinal(template, 3);
+
             assertAll(
-                    () -> assertThat(sourceCodeRepository.countByTemplate(template)).isEqualTo(2),
-                    () -> assertThat(sourceCodeRepository.fetchByTemplateAndOrdinal(template, 2).getFilename())
-                            .isEqualTo("새로운 제목1"),
-                    () -> assertThatThrownBy(() -> sourceCodeRepository.fetchById(deleteSourceCode.getId()))
-                            .isInstanceOf(CodeZapException.class)
-                            .hasMessage("식별자 " + deleteSourceCode.getId() + "에 해당하는 소스 코드가 존재하지 않습니다.")
-            );
+                    () -> assertThat(sourceCodeRepository.countByTemplate(template)).isEqualTo(3),
+                    () -> assertThat(updatedSourceCode1.getFilename()).isEqualTo("변경된 제목1"),
+                    () -> assertThat(updatedSourceCode1.getOrdinal()).isEqualTo(1),
+                    () -> assertThat(updatedSourceCode2.getFilename()).isEqualTo("변경된 제목2"),
+                    () -> assertThat(updatedSourceCode2.getOrdinal()).isEqualTo(2),
+                    () -> assertThat(newSourceCode.getFilename()).isEqualTo("새로운 제목1"));
         }
 
         @Test
-        @Disabled("애플리케이션 코드에서 로직 변경 필요")
         @DisplayName("성공: 썸네일 코드 삭제 시, 새로 순서가 1인 코드가 썸네일으로 등록")
         void updateSourceCodes_WhenDeleteThumbnailCode_NewThumbnailAssigned() {
             // given
             Template template = createSavedTemplate();
             SourceCode thumbnailSourceCode = sourceCodeRepository.save(SourceCodeFixture.get(template, 1));
-            SourceCode othersourceCode = sourceCodeRepository.save(SourceCodeFixture.get(template, 2));
+            SourceCode othersourceCode = sourceCodeRepository.save(SourceCodeFixture.get(template, 1));
             Thumbnail thumbnail = thumbnailRepository.save(new Thumbnail(template, thumbnailSourceCode));
 
             List<Long> deleteSourceCodeIds = List.of(thumbnailSourceCode.getId());
@@ -252,8 +248,8 @@ class SourceCodeServiceTest extends ServiceTest {
             SourceCode sourceCode2 = sourceCodeRepository.save(SourceCodeFixture.get(template, 2));
             Thumbnail thumbnail = thumbnailRepository.save(new Thumbnail(template, sourceCode1));
 
-            UpdateSourceCodeRequest ordinalUpdateRequest = new UpdateSourceCodeRequest(sourceCode1.getId(), "변경된 제목1",
-                    "변경된 내용1", 3);
+            UpdateSourceCodeRequest ordinalUpdateRequest = new UpdateSourceCodeRequest(
+                    sourceCode1.getId(), "변경된 제목1", "변경된 내용1", 3);
             UpdateSourceCodeRequest updateRequest2 = getUpdateSourceCodeRequest(sourceCode2);
             CreateSourceCodeRequest createRequest = new CreateSourceCodeRequest("새로운 제목3", "새로운 내용3",
                     sourceCode1.getOrdinal());
@@ -277,7 +273,6 @@ class SourceCodeServiceTest extends ServiceTest {
         }
 
         @Test
-        @Disabled("현재는 전체 삭제를 막지 않고 thumbnail으로 인해 DataIntegrityViolationException 발생, 애플리케이션 코드에서 로직 변경 필요")
         @DisplayName("실패: 템플릿의 전체 소스 코드 삭제는 불가능함")
         void updateSourceCodes_WhenDeleteAll() {
             // given
@@ -297,9 +292,10 @@ class SourceCodeServiceTest extends ServiceTest {
             );
 
             // when & then
-            assertThatThrownBy(() -> sourceCodeService.updateSourceCodes(updateTemplateRequest, template, thumbnail))
+            assertThatThrownBy(
+                    () -> sourceCodeService.updateSourceCodes(updateTemplateRequest, template, thumbnail))
                     .isInstanceOf(CodeZapException.class)
-                    .hasMessage("소스 코드는 최소 1개 이상 존재해야 합니다.");
+                    .hasMessage("소스 코드는 최소 1개 입력해야 합니다.");
         }
 
         @Test
@@ -321,19 +317,19 @@ class SourceCodeServiceTest extends ServiceTest {
             );
 
             // when & then
-            assertThatThrownBy(() -> sourceCodeService.updateSourceCodes(updateTemplateRequest, template, thumbnail))
+            assertThatThrownBy(
+                    () -> sourceCodeService.updateSourceCodes(updateTemplateRequest, template, thumbnail))
                     .isInstanceOf(CodeZapException.class)
                     .hasMessage("소스 코드의 정보가 정확하지 않습니다.");
         }
 
         @Test
-        @Disabled("중복이어도 저장되고 있음, 애플리케이션 코드에서 로직 변경 필요")
         @DisplayName("실패: 변경할 소스 코드의 순서가 중복된 소스 코드의 순서인 경우")
         void updateSourceCodes_WhenDuplicateOrder() {
             // given
             Template template = createSavedTemplate();
             SourceCode sourceCode1 = sourceCodeRepository.save(SourceCodeFixture.get(template, 1));
-            SourceCode sourceCode2 = sourceCodeRepository.save(SourceCodeFixture.get(template, 2));
+            SourceCode sourceCode2 = sourceCodeRepository.save(SourceCodeFixture.get(template, 1));
             Thumbnail thumbnail = thumbnailRepository.save(new Thumbnail(template, sourceCode1));
 
             UpdateSourceCodeRequest updateRequest1 = getUpdateSourceCodeRequest(sourceCode1);
@@ -348,9 +344,10 @@ class SourceCodeServiceTest extends ServiceTest {
             );
 
             // when & then
-            assertThatThrownBy(() -> sourceCodeService.updateSourceCodes(updateTemplateRequest, template, thumbnail))
+            assertThatThrownBy(
+                    () -> sourceCodeService.updateSourceCodes(updateTemplateRequest, template, thumbnail))
                     .isInstanceOf(CodeZapException.class)
-                    .hasMessage("소스 코드의 순서는 중복될 수 없습니다.");
+                    .hasMessage("소스 코드 순서가 잘못되었습니다.");
         }
 
         private UpdateSourceCodeRequest getUpdateSourceCodeRequest(SourceCode sourceCode) {
@@ -437,5 +434,17 @@ class SourceCodeServiceTest extends ServiceTest {
         Member member = memberRepository.save(MemberFixture.getFirstMember());
         Category category = categoryRepository.save(CategoryFixture.getFirstCategory());
         return templateRepository.save(TemplateFixture.get(member, category));
+    }
+
+    private CreateTemplateRequest createSavedTemplateRequest(List<CreateSourceCodeRequest> requests) {
+        return new CreateTemplateRequest(
+                "title",
+                "description",
+                requests,
+                1,
+                1L,
+                List.of(),
+                Visibility.PUBLIC
+        );
     }
 }
